--- a/Js_SubstringStr/index.html
+++ b/Js_SubstringStr/index.html
@@ -5,6 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<script crs='js/script.js'></script>
+	<script src='js/script.js'></script>
 </body>
 </html>	
