--- a/JS_Weather_widget/index.html
+++ b/JS_Weather_widget/index.html
@@ -11,6 +11,6 @@
 <body>
 	<div id="wrapper"></div>
 	
-	<script src="js/scrtiptSetTimeOut.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
