--- a/JS_LJS/index.html
+++ b/JS_LJS/index.html
@@ -3,8 +3,36 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="sass/style.css">
 </head>
 <body>
-	<script src="js/script.js"></script>
+	<div class="wrapper">
+		<div class="help-title">
+			<p id="help-info">CHOOSE COIN!</p>
+		</div>
+		<div class="coins">
+			<div id="coin-1"></div>
+			<div id="coin-2"></div>
+			<div id="coin-3"></div>
+		</div>
+		<div class="machine">
+			<div class="water-field">
+				<div id="title-mineral"></div>
+				<div class="push-button-mineral">
+					<img src="PNG/button.png" alt="">
+				</div>
+			</div>
+			<div class="water-field">
+				<div id="title-sweet"></div>
+				<div class="push-button-sweet">
+					<img src="PNG/button.png" alt="">
+				</div>
+			</div>
+			<div class="water-glass-comtainer">
+				<div id="glass"></div>
+			</div>
+		</div>
+	</div>
+	<script src="js/script_fsm.js"></script>
 </body>
 </html>
