--- a/JS_LJS/index.html
+++ b/JS_LJS/index.html
@@ -11,9 +11,9 @@
 			<p id="help-info">CHOOSE COIN!</p>
 		</div>
 		<div class="coins">
-			<div id="coin-1"></div>
-			<div id="coin-2"></div>
-			<div id="coin-3"></div>
+			<div class="coin1"></div>
+			<div class="coin2"></div>
+			<div class="coin3"></div>
 		</div>
 		<div class="machine">
 			<div class="water-field">
@@ -29,7 +29,7 @@
 				</div>
 			</div>
 			<div class="water-glass-comtainer">
-				<div id="glass"></div>
+				<div id="waterGlass"></div>
 			</div>
 		</div>
 	</div>
