--- a/JS_LJS/index.html
+++ b/JS_LJS/index.html
@@ -9,30 +9,27 @@
 </head>
 <body>
 	<div class="wrapper">
-		<div class="help-title">
-			<textArea id="textHelp" cols="100">ВЫБЕРИТЕ МОНЕТУ!!!</textArea>
-		</div>
 		<div class="coins">
 			<div class="coin1"></div>
 			<div class="coin2"></div>
 			<div class="coin3"></div>
 		</div>
 		<div class="machine">
+			<div class="help-title">
+				<textArea id="textHelp" cols="100">ВЫБЕРИТЕ МОНЕТУ!!!</textArea>
+			</div>
 			<div class="water-field">
 				<div id="title-mineral"></div>
 				<div class="push-button-mineral"></div>
-			</div>
-			<div class="water-field">
 				<div id="title-sweet"></div>
 				<div class="push-button-sweet"></div>
-			</div>
-			<div class="water-glass-comtainer">
-				<div id="waterGlass"></div>
+				<div class="water-glass-container">
+					<div id="waterGlass"></div>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	//bacground music
 	<embed src="./sound/bensound-jazzcomedy.mp3"
 		   autostart="true"
 		   loop="true"
