--- a/D3js_projects/D3_1/index.html
+++ b/D3js_projects/D3_1/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="sass/style.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js"></script>
+	<script src="https://d3js.org/d3-selection-multi.v0.4.min.js"></script>
 </head>
 <body>
 
